--- a/index.html
+++ b/index.html
@@ -4,50 +4,77 @@
 <head>
 	<title>	</title>
 
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-	<h1>Josh S.</h1>
-
-<div class="class1">	
-		<a href="#">About</a>
-		<a href="#">Portfolio</a>
-		<a href="#">Contact</a>
-	<hr>
-</div>
-
-<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
 
 <body>
 
+<header>
+	<div class="header">
+		<h1>Josh S.</h1>
 
+		<div class="navigation">	
+				<a href="index.html">About</a>
+				&nbsp;|&nbsp;
+				<a href="portfolio.html">Portfolio</a>
+				&nbsp;|&nbsp;
+				<a href="header.html">Contact</a>
+		</div>
+
+	</div>
+</header>
+	
+<div id="#aboutMe">
 	<!-- About me section -->
-	<div class="class2">
+	<div class="aboutMe">
 
-		<h2> About Me </h2>
+		<h2 class="aboutHeader"> About Me </h2>
 
 		<hr>
+		
+		<p class="paragraph">
 
-		<img src="assets/images/Stick_Josh2.jpg" width="150px" height="200px">
+			<img class="profileimage" src="assets/images/Stick_Josh2.jpg">
 
-		<p> Hello Hello Hello Hello Hello Hello Hello Hello </p>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+
+			
+
+		<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim m Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim m</p>
 
 	</div>
 
 
 	<!-- Connect with Me -->
-	<div>
+	<div class="connectme">
 
 		<h3>Connect with Me</h3>
+		
+		<hr>
+		<br>
+		
+		<a href="#"> <img class="linkedimage" src="assets/images/github_logo.png"></a>
+		<a href="#"> <img class="linkedimage" src="assets/images/linkedin_logo.png"></a>
+		<a href="#"> <img class="linkedimage" src="assets/images/stackedoverflow_logo.png"></a>
+		
+		
+
+
+
+		
 
 	</div>
+
+</div>
 
 
 </body>
 
-<footer>
+<footer class="footer">
 	
-	<p> Copyright 2017 Josh S.</p>
+	<p> &copy; Copyright 2017 Josh S.</p>
 </footer>
 
 
