Adding footer.html, for includes

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,11 +10,19 @@
 </head>
 <body>
 
-	<div w3-include-html="https://raw.githubusercontent.com/UniversalStudentOfLife/Basic-Portfolio/master/index.html"></div> 
+	<div w3-include-html="https://raw.githubusercontent.com/UniversalStudentOfLife/Basic-Portfolio/master/header.html"></div> 
 	
 	<script>
 		w3.includeHTML();
 	</script>
 
 </body>
+
+	<div w3-include-html="https://raw.githubusercontent.com/UniversalStudentOfLife/Basic-Portfolio/master/header.html"></div> 
+
+		<script>
+		w3.includeHTML();
+	</script>
+
+
 </html>
