--- a/header.html
+++ b/header.html
@@ -2,11 +2,11 @@
 		<h1>Josh S.</h1>
 
 		<div class="navigation">	
-				<a href="#">About</a>
+				<a href="index.html">About</a>
 				&nbsp;|&nbsp;
 				<a href="portfolio.html">Portfolio</a>
 				&nbsp;|&nbsp;
-				<a href="#">Contact</a>
+				<a href="contact.html">Contact</a>
 		</div>
 
-	</div>
+</div>
