--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-
 </head>
 
 <body>
@@ -20,7 +19,7 @@
 				&nbsp;|&nbsp;
 				<a href="portfolio.html">Portfolio</a>
 				&nbsp;|&nbsp;
-				<a href="header.html">Contact</a>
+				<a href="contact.html">Contact</a>
 		</div>
 
 	</div>
