Major changes. Added content for the portfolio page and contact page. uploaded images, major css additions, added flex placeholders.

--- a/contact.html
+++ b/contact.html
@@ -9,13 +9,46 @@
 
 </head>
 <body>
+<div class="content">
 
 	<div w3-include-html="https://raw.githubusercontent.com/UniversalStudentOfLife/Basic-Portfolio/master/header.html"></div> 
+
+
+
+	<div class="contact" style="width:50%">
+
+		<h2 class="aboutHeader"> contact </h2>
+
+		<hr>
+		
+	
+		
+		<form>
+
+			<p> Name </p>
+				<input type="text" class="textinput">
+			<p> Email </p>
+				<input type="text" class="textinput">
+			<p> Message </p>
+				<textarea class="messagebox"></textarea>
+
+				<input type="button" name="Submit" class="submitbutton">
+
+		</form>
+
+
+	</div>
+
+
+	<div w3-include-html="https://raw.githubusercontent.com/UniversalStudentOfLife/Basic-Portfolio/master/sidebar.html"></div> 
+
+
+
 	
 	<script>
 		w3.includeHTML();
 	</script>
-
+</div>
 </body>
 
 	<div w3-include-html="https://raw.githubusercontent.com/UniversalStudentOfLife/Basic-Portfolio/master/footer.html"></div> 
