--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+<div class="content">
 
 <header>
 	<div class="header">
@@ -25,9 +26,9 @@
 	</div>
 </header>
 	
-<div id="#aboutMe">
+
 	<!-- About me section -->
-	<div class="aboutMe">
+	<div class="aboutMe content">
 
 		<h2 class="aboutHeader"> About Me </h2>
 
@@ -56,19 +57,12 @@
 		
 		<a href="#"> <img class="linkedimage" src="assets/images/github_logo.png"></a>
 		<a href="#"> <img class="linkedimage" src="assets/images/linkedin_logo.png"></a>
-		<a href="#"> <img class="linkedimage" src="assets/images/stackedoverflow_logo.png"></a>
-		
-		
-
-
-
-		
+		<a href="#"> <img class="linkedimage" src="assets/images/stackedoverflow_logo.png"></a>	
 
 	</div>
 
-</div>
 
-
+	</div>
 </body>
 
 <footer class="footer">
