--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,35 @@
 <body>
 
 	<div w3-include-html="https://raw.githubusercontent.com/UniversalStudentOfLife/Basic-Portfolio/master/header.html"></div> 
+
+
+
+	<div class="portfolio">
+
+		<h2 class="aboutHeader"> Portfolio </h2>
+
+		<hr>
+		
+		<p class="paragraph">
+
+			<img class="portfolioimage" src="assets/images/hangman.jpg">
+
+			<img class="portfolioimage" src="assets/images/rpg.jpg">
+
+			<img class="portfolioimage" src="assets/images/trivia.jpg">
+
+			<img class="portfolioimage" src="assets/images/rutgers.jpg">
+
+			<img class="portfolioimage" src="assets/images/rps.jpg">
+
+	</div>
+
+
+	<div w3-include-html="https://raw.githubusercontent.com/UniversalStudentOfLife/Basic-Portfolio/master/sidebar.html"></div> 
+
+
+
+
 	
 	<script>
 		w3.includeHTML();
