--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Josh S.</title>
 
 	<script src="https://www.w3schools.com/lib/w3.js"></script>
 
@@ -17,7 +17,7 @@
 
 	<div class="contact" style="width:50%">
 
-		<h2 class="aboutHeader"> contact </h2>
+		<h2 class="mainheader"> Contact </h2>
 
 		<hr>
 		
@@ -26,13 +26,13 @@
 		<form>
 
 			<p> Name </p>
-				<input type="text" class="textinput">
+				<input type="text" name="name" value=" John Smith " class="textinput" >
 			<p> Email </p>
-				<input type="text" class="textinput">
+				<input type="text" name="email" value=" example@gmail.com " class="textinput">
 			<p> Message </p>
-				<textarea class="messagebox"></textarea>
+				<textarea  name="messagebox" class="messagebox"></textarea>
 
-				<input type="button" name="Submit" class="submitbutton">
+				<input type="button" value="Submit" class="submitbutton">
 
 		</form>
 
@@ -41,9 +41,6 @@
 
 
 	<div w3-include-html="https://raw.githubusercontent.com/UniversalStudentOfLife/Basic-Portfolio/master/sidebar.html"></div> 
-
-
-
 	
 	<script>
 		w3.includeHTML();
