--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Josh S.</title>
 
 	<script src="https://www.w3schools.com/lib/w3.js"></script>
 
@@ -16,7 +16,7 @@
 
 	<div class="portfolio">
 
-		<h2 class="aboutHeader"> Portfolio </h2>
+		<h2 class="mainheader"> Portfolio </h2>
 
 		<hr>
 		
