--- a/index.html
+++ b/index.html
@@ -4,38 +4,46 @@
 <head>
 	<title>Josh S.</title>
 
+	<!--Reference to Javascript-->
 	<script src="https://www.w3schools.com/lib/w3.js"></script>
 
+	<!--Reference to CSS Stylesheet(s)-->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
 
 <body>
+	<!-- Potential future Flex reference going here-->
 <div class="content">
 
-<header>
-	
-	<!--Header (Include)-->
-	<div w3-include-html="https://raw.githubusercontent.com/UniversalStudentOfLife/Basic-Portfolio/master/header.html"></div> 
+	<header>
+		
 
-</header>
-	
+		<!--My Portfolied-->
+		<div w3-include-html="https://raw.githubusercontent.com/UniversalStudentOfLife/Basic-Portfolio/master/header.html"></div> 
 
-	<!-- About me section -->
+	</header>
+		
+
+	<!-- About me Section -->
 	<div class="aboutMe content">
-
+		
 		<h2 class="mainheader"> About Me </h2>
 
+		<!-- horizontal line for formatting-->
 		<hr>
 		
+		<!-- Main page content-->
 		<p class="paragraph">
 
+			<!--Main Profile Image-->
 			<img class="profileimage" src="assets/images/Stick_Josh2.jpg">
 
+			<!-- Main paragrapgh-->
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
 
 			
-
+	
 		<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim m Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim m</p>
 
 	</div>
@@ -45,6 +53,7 @@
 	<div w3-include-html="https://raw.githubusercontent.com/UniversalStudentOfLife/Basic-Portfolio/master/sidebar.html"></div> 
 
 
+	<!--Javascript reference for the Includes-->
 	<script>
 		w3.includeHTML();
 	</script>
@@ -52,7 +61,7 @@
 	</div>
 </body>
 
-
+<!--Footer (include)-->
 <div w3-include-html="https://raw.githubusercontent.com/UniversalStudentOfLife/Basic-Portfolio/master/footer.html"></div> 
 
 </html>
