--- a/portfolio.html
+++ b/portfolio.html
@@ -3,13 +3,20 @@
 <head>
 	<title>Josh S.</title>
 
+	<!--Reference to Javascript-->
 	<script src="https://www.w3schools.com/lib/w3.js"></script>
-
+	
+	<!--Reference to CSS Stylesheet(s)-->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
 <body>
 
+
+	<!-- Potential future Flex reference going here-->
+<div class="content">
+
+	<!--Header (Include)-->
 	<div w3-include-html="https://raw.githubusercontent.com/UniversalStudentOfLife/Basic-Portfolio/master/header.html"></div> 
 
 
@@ -22,6 +29,7 @@
 		
 		<p class="paragraph">
 
+			<!--5 images here-->
 			<img class="portfolioimage" src="assets/images/hangman.jpg">
 
 			<img class="portfolioimage" src="assets/images/rpg.jpg">
@@ -35,18 +43,20 @@
 	</div>
 
 
+	<!--<!--Header (Include)--> -->
 	<div w3-include-html="https://raw.githubusercontent.com/UniversalStudentOfLife/Basic-Portfolio/master/sidebar.html"></div> 
 
 
 
 
+	<!--Javascript reference for the Includes-->
 	
 	<script>
 		w3.includeHTML();
 	</script>
 
-</body>
 
+	<!--Footer (include)-->
 	<div w3-include-html="https://raw.githubusercontent.com/UniversalStudentOfLife/Basic-Portfolio/master/footer.html"></div> 
 
 
