--- a/contact.html
+++ b/contact.html
@@ -3,32 +3,36 @@
 <head>
 	<title>Josh S.</title>
 
+	<!--Reference to Javascript-->
 	<script src="https://www.w3schools.com/lib/w3.js"></script>
 
+	<!--Reference to CSS Stylesheet(s)-->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
 <body>
+<!-- Potential future Flex reference going here-->
 <div class="content">
 
+	<!--Header (include)-->
 	<div w3-include-html="https://raw.githubusercontent.com/UniversalStudentOfLife/Basic-Portfolio/master/header.html"></div> 
 
 
-
+	<!--Contact div. Includes all of the contact data-->
 	<div class="contact" style="width:50%">
 
 		<h2 class="mainheader"> Contact </h2>
 
 		<hr>
-		
-	
-		
+				
 		<form>
 
 			<p> Name </p>
 				<input type="text" name="name" value=" John Smith " class="textinput" >
+
 			<p> Email </p>
 				<input type="text" name="email" value=" example@gmail.com " class="textinput">
+
 			<p> Message </p>
 				<textarea  name="messagebox" class="messagebox"></textarea>
 
