--- a/sidebar.html
+++ b/sidebar.html
@@ -8,8 +8,8 @@
 		
 		<a href="https://github.com/UniversalStudentOfLife"> <img class="linkedimage" src="assets/images/github_logo.png"></a>
 
-		<a href="https://www.linkedin.com/in/josh-s/"> <img class="linkedimage" target="_blank" src="assets/images/linkedin_logo.png"></a>
+		<a href="https://www.linkedin.com/in/josh-s/"> <img class="linkedimage" src="assets/images/linkedin_logo.png"></a>
 
-		<a href="https://stackoverflow.com/users/8350104/student-of-life?tab=profile" target="_blank" > <img class="linkedimage" src="assets/images/stackedoverflow_logo.png"></a>	
+		<a href="https://stackoverflow.com/users/8350104/student-of-life?tab=profile"> <img class="linkedimage" src="assets/images/stackedoverflow_logo.png"></a>	
 
 	</div>
