Uploading new pictures

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,15 +30,15 @@
 		<p class="paragraph">
 
 			<!--5 images here-->
-			<img class="portfolioimage" src="assets/images/hangman.jpg">
+			<img class="portfolioimage" src="assets/images/labelled_hangman.jpg">
 
-			<img class="portfolioimage" src="assets/images/rpg.jpg">
+			<img class="portfolioimage" src="assets/images/labelled_rpg.jpg">
 
-			<img class="portfolioimage" src="assets/images/trivia.jpg">
+			<img class="portfolioimage" src="assets/images/labelled_trivia.jpg">
 
-			<img class="portfolioimage" src="assets/images/rutgers.jpg">
+			<img class="portfolioimage" src="assets/images/labelled_rutgers.jpg">
 
-			<img class="portfolioimage" src="assets/images/rps.jpg">
+			<img class="portfolioimage" src="assets/images/labelled_rps.jpg">
 
 	</div>
 
@@ -50,7 +50,7 @@
 
 
 	<!--Javascript reference for the Includes-->
-	
+
 	<script>
 		w3.includeHTML();
 	</script>
