--- a/header.html
+++ b/header.html
@@ -1,6 +1,10 @@
 <div class="header">
 		<h1>Josh S.</h1>
 
+<!-- This code handles all of the sidebar information and is referenced later on in "inlcudes" to reducee the amount of coding required, repetative code, and a single place to modify the code for uniformity-->
+
+
+
 		<div class="navigation">	
 				<a href="index.html">About</a>
 				&nbsp;|&nbsp;
