--- a/sidebar.html
+++ b/sidebar.html
@@ -1,3 +1,6 @@
+	
+<!-- This code handles all of the sidebar information and is referenced later on in "inlcudes" to reducee the amount of coding required, repetative code, and a single place to modify the code for uniformity-->
+
 	<!-- Connect with Me -->
 	<div class="connectme">
 
