Uploading new pictures

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,15 +30,15 @@
 		<p class="paragraph">
 
 			<!--5 images here-->
-			<img class="portfolioimage" src="assets/images/labelled_hangman.jpg">
+			<img class="portfolioimage" src="assets/images/labelled_hangman.png">
 
-			<img class="portfolioimage" src="assets/images/labelled_rpg.jpg">
+			<img class="portfolioimage" src="assets/images/labelled_rpg.png">
 
-			<img class="portfolioimage" src="assets/images/labelled_trivia.jpg">
+			<img class="portfolioimage" src="assets/image/labelled_trivia.png">
 
-			<img class="portfolioimage" src="assets/images/labelled_rutgers.jpg">
+			<img class="portfolioimage" src="assets/images/labelled_RPSTrivia.png">
 
-			<img class="portfolioimage" src="assets/images/labelled_rps.jpg">
+			<img class="portfolioimage" src="assets/images/labelled_rps.png">
 
 	</div>
 
