--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
 	</div>
 
 
-	<!--<!--Header (Include)--> -->
+	<!--Header (Include)-->
 	<div w3-include-html="https://raw.githubusercontent.com/UniversalStudentOfLife/Basic-Portfolio/master/sidebar.html"></div> 
 
 
