Replaced the filler text

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 			<img class="profileimage" src="assets/images/Stick_Josh2.jpg">
 
 			<!-- Main paragrapgh-->
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+			Here are a few short paragraphs about myself. I used to ride a motorcycle, I thoroughly enjoyed riding. My favorite part about riding was going through the "twisties" and "hitting" turns (leaning into/over) as far I could, to drag my pucks (a device attached to the knee and designed to be dragged against the ground). Night riding was my favorite thing to do. I had equipped my bike with numerous multi-color LED lights (legal in Maryland), and glowed like a super nova when riding on the empty highways at night.  </p>
 
 			
 	
-		<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim m Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim m</p>
+		<p class="paragraph"> I don't have a particular genre of music I listen to. I listen to almost everything and anything. A few examples are: Classical, Rap, Pop, EDM, Hardstyle, Dubstep, K-pop, Rock, Instrumental, Traditional, etc... Some of my top favorite artists are G-Dragon, Sinatra, HeadHunterz, etc... </p>
 
 	</div>
 
