--- a/sidebar.html
+++ b/sidebar.html
@@ -9,10 +9,10 @@
 		<hr>
 		<br>
 		
-		<a href="https://github.com/UniversalStudentOfLife"> <img class="linkedimage" src="assets/images/github_logo.png"></a>
+		<a href="https://github.com/UniversalStudentOfLife"> <img class="linkedimage" src="assets/images/github_logo.png" target="_blank"></a>
 
-		<a href="https://www.linkedin.com/in/josh-s/"> <img class="linkedimage" src="assets/images/linkedin_logo.png"></a>
+		<a href="https://www.linkedin.com/in/josh-s/"> <img class="linkedimage" src="assets/images/linkedin_logo.png" target="_blank"></a>
 
-		<a href="https://stackoverflow.com/users/8350104/student-of-life?tab=profile"> <img class="linkedimage" src="assets/images/stackedoverflow_logo.png"></a>	
+		<a href="https://stackoverflow.com/users/8350104/student-of-life?tab=profile"> <img class="linkedimage" src="assets/images/stackedoverflow_logo.png" target="_blank"></a>	
 
 	</div>
